k8s/coma/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "media.artichokenetwork.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: navidrome
                port:
                  number: 8096
    - host: "media.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - "media.artichokenetwork.com"
      secretName: artichokenetwork-cert
    - hosts:
        - "media.artichoke.cc"
      secretName: artichoke-cc-cert
